Fixes #119 "white-space: nowrap" causing problems with long result items

--- a/src/jquery.typeahead.css
+++ b/src/jquery.typeahead.css
@@ -340,8 +340,10 @@ input {
     font-weight: normal;
     line-height: 1.42857143;
     color: #333333;
-    white-space: nowrap;
     text-decoration: none;
+}
+.typeahead-dropdown > li > a {
+    white-space: nowrap;
 }
 
 .typeahead-list > li > a:hover,
